--- a/AirSale/src/main/resources/application.yml
+++ b/AirSale/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     password: 297113973
     url: "jdbc:postgresql://localhost:5432/jd2_airsales"
     driver-class-name: org.postgresql.Driver
+  security:
+    user:
+      name: admin
+      roles: ADMIN
+      password: 123456
 #  autoconfigure:
 #    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
@@ -25,5 +30,5 @@ server:
 
 jwtconfig:
   secret: ZvkYYnyM929FM4NW9_hSis7_x3_9rymsDAx9yuOcc1I
-  expiration: 600000
+  expiration: 1500000
 
