Added authentication annotation.

--- a/AirSale/web/src/main/resources/application.yml
+++ b/AirSale/web/src/main/resources/application.yml
@@ -17,18 +17,20 @@ spring:
     password: 297113973
     url: "jdbc:postgresql://localhost:5432/jd2_airsales"
     driver-class-name: org.postgresql.Driver
-  security:
-    user:
-      name: admin
-      roles: ADMIN
-      password: 123456
-#  autoconfigure:
-#    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+  main:
+    allow-bean-definition-overriding: true
+    #  autoconfigure:
+    #    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 
 server:
   port: 8080
 
 jwtconfig:
-  secret: ZvkYYnyM929FM4NW9_hSis7_x3_9rymsDAx9yuOcc1I
+  secret: "ZvkYYnyM929FM4NW9_hSis7_x3_9rymsDAx9yuOcc1I"
   expiration: 1500000
+
+roleconfiguration:
+  hierarchy: "ROLE_SUPERADMIN > ROLE_ADMIN \n ROLE_AMIN > ROLE_MANAGER \n ROLE_MANAGER > ROLE_USER"
 
